--- a/.travis.yml
+++ b/.travis.yml
@@ -13,15 +13,22 @@ git:
 # the `install` step will run `bundle install` by default. 
 script: ./script/cibuild
 
+#deploy:
+#  provider: pages
+#  skip-cleanup: true
+#  github-token: $GITHUB_TOKEN
+#  local_dir: public
+#  on:
+#    branch: release1
+
 deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN
-  local_dir: public
-  on:
-    branch: release1
-
-
+  provider: gcs
+  access_key_id: $AKEY
+  secret_access_key: $ASEC
+  bucket: https://console.cloud.google.com/storage/browser/mhw_production
+  skip_cleanup: true
+  acl: public-read
+  local-dir: release1
 
 addons:
   apt:
