--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ deploy:
   bucket: gs://mhw_production
   skip_cleanup: true
   acl: public-read
-  local-dir: release1
+#  local-dir: release1
 
 addons:
   apt:
