--- a/.travis.yml
+++ b/.travis.yml
@@ -26,10 +26,10 @@ deploy:
   access_key_id: $AKEY
   secret_access_key: $ASEC
 #  bucket: https://console.cloud.google.com/storage/browser/mhw_production
-  bucket: gs://mhw_production
+  bucket: mhw_production
   skip_cleanup: true
   acl: public-read
-#  local-dir: release1
+  local-dir: release1
 
 addons:
   apt:
