--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ git:
 # the `install` step will run `bundle install` by default. 
 script: ./script/cibuild
 
+#deply to github
 #deploy:
 #  provider: pages
 #  skip-cleanup: true
@@ -21,15 +22,18 @@ script: ./script/cibuild
 #  on:
 #    branch: release1
 
-deploy:
-  provider: gcs
-  access_key_id: $AKEY
-  secret_access_key: $ASEC
-#  bucket: https://console.cloud.google.com/storage/browser/mhw_production
-  bucket: mhw_production
-  skip_cleanup: true
-  acl: public-read
-  local-dir: public
+# deploy to GCS
+#deploy:
+#  provider: gcs
+#  access_key_id: $AKEY
+#  secret_access_key: $ASEC
+#  bucket: mhw_production
+#  skip_cleanup: true
+#  acl: public-read
+#  local-dir: public
+
+after_success: s3_website push
+
 
 addons:
   apt:
