--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,8 @@ deploy:
   provider: s3
   access_key_id: $S3_ACCESS_KEY_ID
   secret_access_key: $S3_SECRET_KEY
-#  bucket: "http://goldsmithd.github.io.s3-website.eu-west-2.amazonaws.com"
-  bucket: "goldsmithd.github.io"
+  bucket: "http://goldsmithd.github.io.s3-website.eu-west-2.amazonaws.com"
+#  bucket: "goldsmithd.github.io"
   region: eu-west-2
   skip_cleanup: true
   local_dir: public
