--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_script:
 
 git:
   depth: 25
-  quiet: true
+  quiet: false
   
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default. 
@@ -36,10 +36,8 @@ script: ./script/cibuild
 
 deploy:
   provider: s3
-#  access_key_id: $S3_ACCESS_KEY_ID
-#  secret_access_key: $S3_SECRET_KEY
-  access_key_id: $S3_SECRET_KEY
-  secret_access_key: $S3_ACCESS_KEY_ID
+  access_key_id: $S3_ACCESS_KEY_ID
+  secret_access_key: $S3_SECRET_KEY
 #  bucket: "http://goldsmithd.github.io.s3-website.eu-west-2.amazonaws.com"
   bucket: "goldsmithd.github.io.s3-website.eu-west-2.amazonaws.com"
   region: eu-west-2
