--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,10 @@ script: ./script/cibuild
 
 deploy:
   provider: s3
-  access_key_id: $S3_ACCESS_KEY_ID
-  secret_access_key: $S3_SECRET_KEY
+#  access_key_id: $S3_ACCESS_KEY_ID
+#  secret_access_key: $S3_SECRET_KEY
+  access_key_id: $S3_SECRET_KEY
+  secret_access_key: $S3_ACCESS_KEY_ID  
 #  bucket: "http://goldsmithd.github.io.s3-website.eu-west-2.amazonaws.com"
   bucket: "goldsmithd.github.io.s3-website.eu-west-2.amazonaws.com"
   region: eu-west-2
