--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,8 @@ deploy:
   skip_cleanup: true
   acl: public-read
   local-dir: public
+  on:
+    branch: master
 
 #after_success: s3_website push
 
