--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
   - 2.4.1
 
 before_script:
- - chmod +x ./script/cibuild # or do this locally and commitc
+ - chmod +x ./script/cibuild # or do this locally and commit
 
 git:
   depth: 25
